--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -77,8 +77,8 @@ jobs:
       - name: Install package
         run: poetry install
 
-      # - name: Run unit tests
-      #   run: poetry run pytest . --cov --cov-report=xml
+      - name: Run unit tests
+        run: poetry run pytest . --cov --cov-report=xml
 
-      # - name: Upload coverage to codecov
-      #   uses: codecov/codecov-action@v3
+      - name: Upload coverage to codecov
+        uses: codecov/codecov-action@v3
