--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ prometheus-client = "^0.21.0"
 boto3 = "^1.35.7"
 # workaround for: https://github.com/python-poetry/poetry-plugin-export/issues/183
 urllib3 = ">=1.25.4,<1.27"
+pytest = "^8.3.3"
+pytest-cov = "^6.0.0"
 
 [tool.poetry.scripts]
 gcn-monitor = "gcn_monitor.cli:main"
