--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,7 +45,7 @@ jobs:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           tags: |
             type=raw,value=latest,enable=${{ github.ref == format('refs/heads/{0}', github.event.repository.default_branch) }}
-            type=raw,value={{date 'YYYYMMDD-HHmmss'}}-{{sha}}
+            type=raw,value={{date 'YYYY-MM-DDTHH:mm:ssZ'}}_{{sha}}
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v6
